--- a/themes/next/package.json
+++ b/themes/next/package.json
@@ -38,8 +38,11 @@
     "hexo": "6.0.0",
     "hexo-renderer-marked": "4.1.0",
     "js-yaml": "4.1.0",
-    "mocha": "9.1.3",
+    "mocha": "^9.2.0",
     "nyc": "15.1.0",
-    "stylint": "2.0.0"
+    "stylint": "^1.3.8"
+  },
+  "dependencies": {
+    "hexo-generator-searchdb": "^1.4.0"
   }
 }
